Se instala el modulo de sequelize y mysql2, se creó el CRUD de producto y los endpoints
